--- a/proyecto/static/css/style.css
+++ b/proyecto/static/css/style.css
@@ -2,13 +2,22 @@ body {
   font-family: sans-serif;
   font-size: 16px;
   background-color: #ffffff;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 header {
-  background-color: #000;
-  color: #fff;
+  background-image: url("https://altopuntaje.com/wp-content/uploads/2019/01/estudiar-icfes-saber-11.jpg");
+  color: #000;
   padding: 20px;
   text-align: center;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: cover;
 }
 
 h1 {
@@ -19,33 +28,23 @@ h1 {
 
 main {
   display: flex;
-  margin: 0 4%;
   justify-content: space-evenly;
+  height: 100%;
+  margin: 2em 5em;
 }
 
 form {
-  flex:4;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  padding: 3% 10%;
-}
-
-section {
-  margin-bottom: 20px;
+  flex: 1;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 3em;
 }
 
 label {
   font-size: 1.4em;
   font-weight: bold;
-}
-
-input[type="number"] {
-  width: 94%;
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  margin-bottom: 15px;
 }
 
 select {
@@ -56,33 +55,140 @@ select {
 }
 
 input[type="submit"] {
-  background-color: rgb(184, 184, 184);
-  color: #000000;
-  padding: 15px 55px;
-  border-radius: 10px;
-  border-width: 1px;
+  background-color: #333333;
+  color: white;
+  padding: 1em 3em;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
-  place-self: center;
-  transition: all 0.5s;
+  font-size: 1.2em;
+  font-weight: bold;
+  transition: background-color 0.5s;
+  border: 1px solid #333333;
 }
 
 input[type="submit"]:hover {
-  background-color: #007bff;
+  background-color: #ffffff;
+  color: #333333;
 }
 
 .resultado {
-  flex:3;
   display: flex;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 13%;
+  margin-bottom: 10em;
 }
 
 p {
   border-radius: 15px;
-    text-align: center;
-    font-size: 32px;
-    font-weight: bold;
-    background-color: #ebebeb;
-    padding: 4% 0%;
+  text-align: center;
+  font-size: 32px;
+  font-weight: bold;
+  background-color: #ebebeb;
+  padding: 4% 0%;
+}
+
+.input-container {
+  font-weight: 500;
+  position: relative;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  width: 90%;
+  align-items: center;
+  max-width: 400px;
+}
+
+.input {
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid gray;
+  padding: 1.375rem 0.5rem 0.5rem;
+  height: 3.25rem;
+  width: 100%;
+  color: lightslategray;
+  color: #4f4f4f;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #ffffff;
+  transition: all 0.25s;
+}
+
+.input::placeholder {
+  visibility: hidden;
+  color: #00000000;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.input-label {
+  position: absolute;
+  top: 1.375rem;
+  left: 0.5rem;
+  font-size: 14px;
+  opacity: 0.5;
+  transition: all 0.25s;
+}
+.input-label-select {
+  position: absolute;
+  left: 0.5rem;
+  font-size: 14px;
+  opacity: 0.5;
+  transition: all 0.25s;
+  color: #818181;
+  font-weight: 400;
+  top: 0;
+}
+
+.input:not(:placeholder-shown) + .input-label,
+.input:focus + .input-label {
+  font-size: 0.875rem;
+  top: 0.25rem;
+  transition: all 0.25s;
+}
+
+#loader {
+  display: none;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.container {
+  background-color: white;
+  padding: 5em 5em;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 45%;
+  text-align: center;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto 20px;
+}
+
+.container p {
+  font-size: 1.1em;
+  margin-top: 2em;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
